# CodeGenerator

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
.run/: All in tests.run.xml
3rd party/: CMakeLists.txt
3rd party/rapidjson/include/rapidjson/: document.h  reader.h
core/: CMakeLists.txt
core/CPP/: CPPClassGenerator.cpp  CPPClassGenerator.h  CPPCodeGenerator.cpp  CPPCodeGenerator.h  CPPFunctionGenerator.cpp  CPPFunctionGenerator.h  CPPHelper.cpp  CPPHelper.h  Dependency.cpp  Dependency.h  DependencyList.cpp  DependencyList.h  DependencyMap.cpp  DependencyMap.h  DependencyResolver.cpp  DependencyResolver.h
core/enums/: AccessLevelType.h  ClassType.h  FunctionModifierType.h  LanguageType.h  ObjectType.h  StrToEnumImpl.cpp  ValueType.h  ValueWrapperType.h  enumToStringImpl.cpp
core/generator/: CPPClassGenerator.cpp  CPPClassGenerator.h  CPPFunctionGenerator.h  CPPHelper.cpp  CPPHelper.h  ClassGenerator.h  CodeGenerator.h  FileGenerator.cpp  FileGenerator.h  FunctionGenerator.h  LanguageHelper.h
core/parser/: JsonParser.cpp  JsonParser.h  TreeBuilder.h
core/tokens/: Class.cpp  Class.h  Function.cpp  Function.h  Namespace.h  Object.cpp  Object.h  Property.cpp  Property.h  Schema.cpp  Schema.h  Value.cpp  Value.h
tests/: CMakeLists.txt  test_main.cpp
tests/examples/: functions.json  schema.json
tests/samples/: classes.json  functions.json
